=== 2017-10-15
* Enhancements
  * Added the preceding_sibling method to Element
  * Added the following_sibling method to Element
  * Added the siblings method to Element
  * Added the children method to Element
  * Added the preceding_siblings method to Element
  * Added the following_siblings method to Element
* Fixes
  * Fixed issue that occurred when things were moved around in Watir 6.8
=== 2017-10-12
* Enhancements
  * Fix bug in integration of frames and sections
  * delegate select list text method directly to watir
  * optimize the way to generate a array of symbol
=== 2017-06-12
* Add cookies method to druid
=== 2017-04-24
* Removed all direct delegateds. Now relies on method_missing to call Watir methods.
  * You may have to change RSpec matchers to use method instead of predicate.
=== Version 1.2.2/ 2017/02-14
* Enhancements
  * Added wait method to page class(wait document readystate as complete)
  * When_visible and when_not_visible now wait for element to be present before checking
  * Populate_page_with can populate select_list using values
  * Remove all custom locator mappings
=== Version 1.2.1/ 2017-01-26
* Enhancements
  * Added array methods to section collections
  * Added ability to call style method with no parameters
  * clean up frame and iframe nesting
  * Update travis.yml
  * Added numerous missing element types
  * Added two new methods that check without throwing exception
  * Update to use watir 6 instead of watir-webdriver
=== 2017-01-25
* Enhancements
  * Added list_items method to UnorderedList to get an array of children.
  * Speed optimizations for UnorderedList
  * Added list_items method to OrderedList to get an array of children
  * Speed optimization for OrderedList
  * Added support for the Italic(i) element
  * Added size and location methods to all elements
  * Added width, height, and centre methods for elements
===Version 1.2.0/ 2017-01-24
* Enhancements
  * Added new page_section/ page_sections method to accessor