@@ -1,3 +1,6 @@
+=== 2017-10-16
+* Enhancements
+  * Added the ability to get the values of a table column
 === 2017-10-15
 * Enhancements
   * Added the preceding_sibling method to Element
